added friendly error pages

--- a/public/403.html
+++ b/public/403.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Error interno del sistema</title>
-  <meta name="description" content="Error interno del sistema.">
+  <title>Solicitud rechazada</title>
+  <meta name="description" content="Recurso no encontrado.">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css">
@@ -24,9 +24,9 @@
     <div class="container">
       <div class="row">
         <div class="span6 offset3" style="margin-top:60px;">
-          <h3>Caracoles!</h3>
-          <p>Parece que ha ocurrido un error interno en el sistema</p>
-          <p>Por favor, brindanos un poco de tiempo para solucionarlo.</p>
+          <h3>Oops!</h3>
+          <p>No tienes permisos para esta aqu&iacute;</p>
+          <p>Si crees que esto es un error, <a href="mailto:hi.geoom@gmail.com">conéctate</a> por favor con el administrador.</p>
           <br>
           <p>
             <a href="http://startupplace.org" class="btn btn-primary btn-large">Regresar al inicio</a>
