--- a/public/404.html
+++ b/public/404.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-  }
+  <meta charset="utf-8">
+  <title>Recurso no encontrado</title>
+  <meta name="description" content="Recurso no encontrado.">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/error-page.css">
+  <link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" media="screen">
+  <link type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" media="screen">
+  <link type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet" media="screen">
+  <link type="text/css" href="http://fonts.googleapis.com/css?family=Economica:700,400italic" rel="stylesheet" media="screen">
+  <link rel="shortcut icon" href="ico/favicon.ico" type="image/x-icon">
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://raw.github.com/scottjehl/Respond/master/dest/respond.min.js"></script>
+      <![endif]-->
+  </head>
+  <body class="pageError">
 
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
-  }
+    <!-- content -->
+    <div class="container">
+      <div class="row">
+        <div class="span6" style="margin-top:60px;">
+          <h3>Oops!</h3>
+          <p>Lo sentimos, los aliens nos han robado la p&aacute;gina que estas buscando</p>
+          <p>Es una l&aacute;stima :(</p>
+          <br>
+          <p>
+            <a href="http://startupplace.org" class="btn btn-primary btn-large">Regresar al inicio</a>
+          </p>
+          <br>
+          <p><img src="/img/logotype.png" alt=""/></p>
+        </div>
+        <div class="span6" style="margin-top:0px;">
+          <p><img src="/img/sheep.png" alt=""></p>
+        </div>
+      </div>
+    </div>
+    <!-- /content -->  
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-38384370-1']);
+      _gaq.push(['_trackPageview']);
 
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
-
-<body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
-  <p>If you are the application owner check the logs for more information.</p>
-</body>
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+  </body>
 </html>
