added styles to news, social-bookmarks, anotate fields of news form, changing statics pages og:image, modify robots and custom 500

--- a/public/500.html
+++ b/public/500.html
@@ -29,7 +29,7 @@
           <p>Por favor, brindanos un poco de tiempo para solucionarlo.</p>
           <br>
           <p>
-            <a href="http://startupplace.org" class="btn btn-primary btn-large">Regresar al inicio</a>
+            <a href="http://startupplace.org" class="btn btn-primary btn-large">Intentar ir al inicio</a>
           </p>
           <br>
           <p><img src="/img/logotype.png" alt=""/></p>
